@@ -71,7 +71,7 @@ media-video/nvidia-settings amd64 x86
 ~sys-apps/calculate-1.4.0_p20100921 amd64 x86
 ~sys-apps/calculate-builder-2.2.0.0_p20100921 amd64 x86
 ~sys-apps/calculate-install-2.2.0.0_p20100921 amd64 x86
-~app-misc/calculate-install-gui-2.2.0.0_p20100922 amd64 x86
+~app-misc/calculate-install-gui-2.2.0.0_p20100927 amd64 x86
 ~sys-apps/calculate-client-2.2.0.0_p20100921 amd64 x86
 ~sys-apps/calculate-desktop-2.2.0.0_p20100921 amd64 x86
 ~sys-apps/calculate-templates-2.2.0.0_p20100921 amd64 x86
