@@ -2,6 +2,16 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-install-gui-2.2.0.0_p20100927 (27 Sep 2010)
+
+  27 Sep 2010; Трацевский Александр <alex@gentoo.org>
+  -calculate-install-gui-2.2.0.0_p20100902.ebuild,
+  -calculate-install-gui-2.2.0.0_p20100910-r1.ebuild,
+  -calculate-install-gui-2.2.0.0_p20100921-r1.ebuild,
+  -calculate-install-gui-2.2.0.0_p20100922.ebuild,
+  +calculate-install-gui-2.2.0.0_p20100927.ebuild:
+  daily update
+
 *calculate-install-gui-2.2.0.0_p20100922 (22 Sep 2010)
 
   22 Sep 2010; Трацевский Александр <alex@gentoo.org>
